--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -29,7 +29,7 @@ ja:
         name: 名前
         email: "メールアドレス"
         password: "パスワード"
-        password_confirmation: "確認用パスワード"
+        password_confirmation: "パスワード(再入力)"
         remember_me: "次回から自動的にログイン"
     models:
       user: "ユーザ"
